Fixed positioned shopping cart on mobile.

--- a/docs/assets/css/base.css
+++ b/docs/assets/css/base.css
@@ -392,7 +392,27 @@ header{min-width: 100%}
       display: none;
       animation: slideUp .3s forwards;
       border-top: 1px solid #888;
-
+    }
+    #shopping-cart span{
+      position: absolute;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 16px;
+      background: #333;
+      cursor: pointer;
+      font-size: .6em;
+      color: white
+    }
+    #shopping-cart span:after{
+      content: '';
+      background-image: url("../img/icons/down.svg");
+      background-size: cover;
+      position: absolute;
+      margin-top: -4px;
+      height: 24px;
+      width: 24px
     }
 
       #cart-results{
@@ -894,7 +914,12 @@ footer>ul>li:last-child::before{background-image: url(../img/icons/phone.svg)}
     color: #00A651;
     background-color: white
   }
-
+  #products{
+    overflow-y: scroll;
+    position: relative;
+    display: block;
+    background: none
+  }
   #item-tabs{
     display: none;
     height: calc(100vh - 62px);
@@ -910,32 +935,50 @@ footer>ul>li:last-child::before{background-image: url(../img/icons/phone.svg)}
     padding: 0;
     flex-grow: 1
   }
-  #noname{
-    align-items: stretch;
-  }
   #item-containers{
-    display: flex;
-    flex-grow: 1
+    min-height: 34vh;
+
   }
   .item-container{
+    overflow-y: scroll;
     flex-direction: column;
     justify-content: space-between;
-    flex-grow: 1;
-    padding: 0
+    padding: 5% 10% 3% 10%;
   }
   .cart-controls{
-    position: static;
+    position: fixed;
     display: flex;
-    min-width: 100%;
+    flex-direction: column;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    width: 48px;
     margin: 0;
-    order: 1
+    z-index: 1
+  }
+  .cart-controls input{
+    height: 48px;
+    padding: 0;
   }
   .cart-controls button{
-    padding: 10px 0;
-    flex-grow: 1
+    height: 48px;
+    background: #333;
+    border-radius: 0
   }
+  #shopping-cart{
+    width: 100%;
+    bottom: 61px;
+    position: fixed;
+  }
+  #shopping-cart span{
+    top:-16px;
+    display: flex;
+}
   #cart-control{
     flex-direction: column;
+  }
+  #cart-results{
+    min-height: 55vh
   }
   #cart-control div{
     width: 100%;
@@ -996,7 +1039,15 @@ footer>ul>li:last-child::before{background-image: url(../img/icons/phone.svg)}
   .home-footer{box-shadow: none}
 }
 
+@media screen and (max-width: 390px) {
+  .item-container{
+  padding: 5% 17% 3% 3%;
+}
+  #cart-results{
+    padding: 5px
+  }
 
+}
 /**
  * Toast menu
  */
